--- a/AndroidApp/res/layout/activity_knn_result.xml
+++ b/AndroidApp/res/layout/activity_knn_result.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kết quả chuẩn đoán"
+        android:text="Kết quả chẩn đoán"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
