--- a/Android_App/HealthApp2/app/src/main/res/layout/activity_display_height.xml
+++ b/Android_App/HealthApp2/app/src/main/res/layout/activity_display_height.xml
@@ -17,4 +17,16 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="328dp"
+        android:layout_height="278dp"
+        android:layout_marginLeft="28dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/graph"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="159dp" />
 </android.support.constraint.ConstraintLayout>
