--- a/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
+++ b/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,65 @@
     tools:context="com.example.test.healthapp2.MainActivity">
 
     <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton6"
+        app:layout_constraintTop_toTopOf="@+id/imageButton6"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/btn_dialog" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton8"
+        app:layout_constraintTop_toTopOf="@+id/imageButton8"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <ImageButton
+        android:id="@+id/imageButton7"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginLeft="77dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="415dp"
+        android:onClick="temperature"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <ImageButton
+        android:id="@+id/imageButton8"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="0dp"
+        android:onClick="bloodpressure"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton7"
+        app:layout_constraintTop_toTopOf="@+id/imageButton7"
+        app:srcCompat="@android:drawable/btn_dialog"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginLeft="21dp"
+        android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:onClick="weight"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
@@ -23,7 +78,7 @@
         android:id="@+id/imageButton4"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginLeft="21dp"
+        android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:onClick="height"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
@@ -36,7 +91,7 @@
         android:id="@+id/imageButton"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginLeft="79dp"
+        android:layout_marginLeft="77dp"
         android:layout_marginTop="343dp"
         android:onClick="heartRate"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -48,7 +103,7 @@
         android:id="@+id/imageButton2"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginLeft="21dp"
+        android:layout_marginLeft="19dp"
         android:onClick="SPO2"
         app:layout_constraintLeft_toRightOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="@+id/imageButton"
