--- a/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
+++ b/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
@@ -114,4 +114,18 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageButton"
         app:layout_constraintVertical_bias="0.0" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="LoginGmail"
+        app:backgroundTint="@android:color/holo_blue_light"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/star_on"
+        app:layout_constraintLeft_toRightOf="@+id/imageButton5"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="415dp" />
+
 </android.support.constraint.ConstraintLayout>
