--- a/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
+++ b/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
         android:id="@+id/imageButton5"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="8dp"
@@ -19,14 +18,13 @@
         app:layout_constraintLeft_toRightOf="@+id/imageButton6"
         app:layout_constraintTop_toTopOf="@+id/imageButton6"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/btn_dialog" />
+        app:srcCompat="@drawable/ic_menu_share" />
 
     <ImageButton
         android:id="@+id/imageButton6"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="8dp"
         android:onClick="EWS"
@@ -55,7 +53,6 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="0dp"
         android:onClick="bloodpressure"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
         app:layout_constraintLeft_toRightOf="@+id/imageButton7"
@@ -116,16 +113,20 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="456dp"
         android:clickable="true"
         android:onClick="LoginGmail"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/holo_red_dark"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/star_on"
-        app:layout_constraintLeft_toRightOf="@+id/imageButton5"
-        android:layout_marginLeft="24dp"
+        app:layout_constraintHorizontal_bias="0.821"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="415dp" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.constraint.ConstraintLayout>
