android app: update new version

--- a/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
+++ b/Android_App/HealthApp2/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,14 @@
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="8dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="Bluetooth"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
         app:layout_constraintLeft_toRightOf="@+id/imageButton6"
         app:layout_constraintTop_toTopOf="@+id/imageButton6"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_menu_share" />
+        app:srcCompat="@drawable/bluetooth" />
 
     <ImageButton
         android:id="@+id/imageButton6"
@@ -27,12 +29,14 @@
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="8dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="EWS"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
         app:layout_constraintLeft_toRightOf="@+id/imageButton8"
         app:layout_constraintTop_toTopOf="@+id/imageButton8"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:srcCompat="@drawable/grid_assessment" />
 
     <ImageButton
         android:id="@+id/imageButton7"
@@ -41,10 +45,12 @@
         android:layout_marginLeft="77dp"
         android:layout_marginStart="77dp"
         android:layout_marginTop="415dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="temperature"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:srcCompat="@drawable/grid_temper" />
 
     <ImageButton
         android:id="@+id/imageButton8"
@@ -53,12 +59,14 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="bloodpressure"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
         app:layout_constraintLeft_toRightOf="@+id/imageButton7"
         app:layout_constraintTop_toTopOf="@+id/imageButton7"
-        app:srcCompat="@android:drawable/btn_dialog"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/blood_pressure" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -66,12 +74,14 @@
         android:layout_height="34dp"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="weight"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
         app:layout_constraintLeft_toRightOf="@+id/imageButton4"
         app:layout_constraintTop_toTopOf="@+id/imageButton4"
-        app:srcCompat="@android:drawable/btn_dialog"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/grid_weight" />
 
     <ImageButton
         android:id="@+id/imageButton4"
@@ -79,54 +89,44 @@
         android:layout_height="34dp"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="height"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
         app:layout_constraintLeft_toRightOf="@+id/imageButton2"
         app:layout_constraintTop_toTopOf="@+id/imageButton2"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/grid__height" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_marginLeft="77dp"
+        android:layout_marginStart="77dp"
         android:layout_marginTop="343dp"
+        android:adjustViewBounds="false"
+        android:background="@color/common_google_signin_btn_text_dark_default"
+        android:cropToPadding="false"
         android:onClick="heartRate"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_marginStart="77dp" />
+        app:srcCompat="@drawable/cardiogram" />
 
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="34dp"
         android:layout_height="34dp"
         android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:onClick="SPO2"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
         app:layout_constraintLeft_toRightOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:srcCompat="@android:drawable/btn_dialog"
-        android:layout_marginStart="19dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="456dp"
-        android:clickable="true"
-        android:onClick="LoginGmail"
-        app:backgroundTint="@android:color/holo_red_dark"
-        app:fabSize="mini"
-        app:layout_constraintHorizontal_bias="0.821"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/oxygen_symbol" />
 
 </android.support.constraint.ConstraintLayout>
